# optimization_method

Lab1_optimization/: CMakeLists.txt  main.cpp  Ле Нгок Куок Лик_лр1.docx
Lab2_optimization_method/: CMakeLists.txt  data copy.rtf  main.cpp  ле нгок куок лик_2.docx
Lab2_optimization_method/built1/: CMakeCache.txt
Lab3/: Lelich  compile.sh  latex.py  lll  main.py  ле_нгок_куок_лик_Lab3.aux  ле_нгок_куок_лик_Lab3.tex
lab4/: Lelich  compile.sh  latex.py  main.py  ле_нгок_куок_лик_lab4.aux  ле_нгок_куок_лик_lab4.tex
